# django-lint

./: .gitignore  README.md  fastentrypoints.py  run_django_lint.py  setup.cfg  setup.py  update_readme_checkers.py
django_lint/: ast_utils.py  cli.py  consts.py  contexts.py  errors.py  files.py
django_lint/checks/: admin.py  base.py  fields.py  foreign_keys.py  models.py  registry.py  related_fields.py  verbose_names.py
