[metadata]
name = django-lint
description = Statically analyze Django projects for common problems.
version = 0.0.0
url = https://github.com/akx/django-lint
author = Aarni Koskela
maintainer = Aarni Koskela
maintainer_email = akx@iki.fi
license = MIT

[options]
install_requires =
    astroid~=2.1.0
packages = find:
include_package_data = True

[options.extras_require]
dev =
    black
    flake8
    isort
    pytest
    pytest-cov

[options.packages.find]
include =
    django_lint*

[options.entry_points]
console_scripts =
    django-lint=django_lint.cli:cli

[flake8]
max-line-length = 119
max-complexity = 10

[pydocstyle]
ignore = D100,D104,D203,D212

[tool:pytest]
norecursedirs = .git .tox

[isort]
profile = black
multi_line_output = 3
